--- a/app/src/main/res/layout/fragment_two.xml
+++ b/app/src/main/res/layout/fragment_two.xml
@@ -1,27 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FragmentTwo">
+    tools:context=".FragmentTwo"
+    android:background="#B36DB5">
 
-
-    <Button
-        android:id="@+id/goToFragmentOneButton"
-        android:layout_width="347dp"
-        android:layout_height="50dp"
-        android:text="Go To Fragment One"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.945" />
 
     <EditText
         android:id="@+id/enterFirstNumberFragmentTwo"
-        android:layout_width="206dp"
-        android:layout_height="71dp"
+        android:layout_width="204dp"
+        android:layout_height="63dp"
         android:hint="ENTER FIRST NUMBER"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -33,8 +24,8 @@
 
     <EditText
         android:id="@+id/enterSecondNumberFragmentTwo"
-        android:layout_width="207dp"
-        android:layout_height="72dp"
+        android:layout_width="204dp"
+        android:layout_height="63dp"
         android:hint="ENTER SECOND NUMBER"
         android:textAlignment="center"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -62,6 +53,7 @@
         android:background="#9BD68E"
         android:gravity="center"
         android:text="SUM"
+        android:textSize="25sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
